tests/cases/compiler-development/artifact/errors/diagnostic-enum-constructor-payload-type.diagnostic
diagnostic error code=T0001 family=type message="type mismatch: expected i32, got bool" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/match/errors/enum-constructor-payload-type.ari" display="tests/cases/match/errors/enum-constructor-payload-type.ari" bytes=100
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/enum-constructor-payload-type.ari" line=7 column=20 end_line=7 end_column=24 byte_start=79 byte_end=83 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/enum-constructor-payload-type.ari:7:20\n   |\n 7 |   let value = Some(true);\n   |                    ^^^^"
